# Notion-ReAct-Agent-Planner

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
agent/: bot.py
api/: server.py
scripts/: test_agent.py
static/: index.html  script.js
tools/: notion_calender.py  notion_notes.py  weather.py
utils/: logger.py
