[project]
name = "react-agent-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-core>=1.4.3",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.3.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
